<resources>
    <string name="app_name">CrudApp</string>
    <string name="posts">Posts</string>
    <string name="sync">sync</string>
    <string name="write_post">write post</string>
    <string name="no_posts_yet">No posts yet !!</string>
    <string name="close">close</string>
    <string name="title">title</string>
    <string name="body">body</string>
    <string name="add">Add</string>
    <string name="update">update</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_to_delete">Are you sure to delete ?</string>
</resources>